--- a/ws/football/src/main/resources/resources/index.html
+++ b/ws/football/src/main/resources/resources/index.html
@@ -19,7 +19,7 @@
 
 main {
     min-height: 100vh;
-    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("img/start.jpg");
+    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("assets/start.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -319,7 +319,7 @@ font-size: 20px;
 
 <body>
     <header class="header">
-        <a href="#"><img src="img/Logo.png" class="logo"></a>
+        <a href="#"><img src="assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
@@ -343,7 +343,7 @@ font-size: 20px;
         </section>
         <div class="mannschaft">
             <div>DIE&nbsp;</div>
-            <img src="img/Logo_gold.png" class="logo2">
+            <img src="assets/Logo_gold.png" class="logo2">
             <div>&nbsp;MANNSCHAFT</div>
         </div>
         <div class="fotowand">
@@ -351,18 +351,18 @@ font-size: 20px;
             <div class="linie-links"></div>
             <div class="linie-rechts"></div>
             <div class="linie-unten"></div>
-            <img src="img/wirtz.webp" class="wirtz">
-            <img src="img/mannschaftfoto.jpg" class="mannschaftfoto">
+            <img src="assets/wirtz.webp" class="wirtz">
+            <img src="assets/mannschaftfoto.jpg" class="mannschaftfoto">
             <div class="linie-strafraum"></div>
             <div class="half-circle"></div>
-            <img src="img/kroos.jpg" class="kroos">
-            <img src="img/trainer.jpg" class="trainer">
+            <img src="assets/kroos.jpg" class="kroos">
+            <img src="assets/trainer.jpg" class="trainer">
         </div>
         <div class="ergebnisse"></div>
-        <img src="img/fans.jpg" class="fanfoto">
-        <img src="img\dfb-spielfeld-fanclub-unten (1).svg" class="line">
+        <img src="assets/fans.jpg" class="fanfoto">
+        <img src="assets/dfb-spielfeld-fanclub-unten (1).svg" class="line">
         <div class="ende">
-            <img src="img/fanclub.jpg" class="fanclub">
+            <img src="assets/fanclub.jpg" class="fanclub">
         </div>
 </body>
 </html>
