fix html-Dateien "img"->"assets"

--- a/ws/football/src/main/resources/resources/login.html
+++ b/ws/football/src/main/resources/resources/login.html
@@ -21,7 +21,7 @@
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        background: url('img/dfb-design-fanclub-poldi2.jpg') no-repeat;
+        background: url('assets/dfb-design-fanclub-poldi2.jpg') no-repeat;
         background-size: cover;
         background-position: center;;
     }
@@ -284,7 +284,7 @@ font-size: 20px;
 
 <body>
     <header class="header">
-        <a href="#"><img src="img/Logo.png" class="logo"></a>
+        <a href="#"><img src="assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
