--- a/ws/football/src/main/resources/resources/stadien.html
+++ b/ws/football/src/main/resources/resources/stadien.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#"><img src="img/Logo.png" class="logo"></a>
+        <a href="#"><img src="assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
@@ -33,7 +33,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
         </div>
         </div>
-        <img src="img/olympiastadion2.jpeg" class="image">
+        <img src="assets/olympiastadion2.jpeg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -43,7 +43,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="img\stadion-bayern.png" class="image">
+        <img src="assets\stadion-bayern.png" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -53,7 +53,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="img\stadion-dortmund.jpg" class="image">
+        <img src="assets\stadion-dortmund.jpg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -63,7 +63,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="img\stadion-hsv.jpg" class="image">
+        <img src="assets\stadion-hsv.jpg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -73,7 +73,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="img\stadion-frankfurt.jpg" class="image">
+        <img src="assets\stadion-frankfurt.jpg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -83,7 +83,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="img\stadion-gelsenkirchen.png" class="image">
+        <img src="assets\stadion-gelsenkirchen.png" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -93,7 +93,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="img\stadion-leipzig.jpeg" class="image">
+        <img src="assets\stadion-leipzig.jpeg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -103,7 +103,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
         </div>
         </div>
-        <img src="img\stadion-dusseldorf2.jpg" class="image">
+        <img src="assets\stadion-dusseldorf2.jpg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -113,7 +113,7 @@
                 <a href="#" class="button">Erfahre mehr</a>
         </div>
         </div>
-        <img src="img\stadion-koeln.jpg" class="image">
+        <img src="assets\stadion-koeln.jpg" class="image">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
