--- a/ws/football/src/main/resources/static/Lucas index.html
+++ b/ws/football/src/main/resources/static/Lucas index.html
@@ -58,26 +58,32 @@
         </div>
 
 
-        <!-- Newsletter Section -->
-    <div class="background">
-        <img src="assets/dfb-design-fanclub-poldi2.jpg" alt="Fanclub Hintergrund" class="background-image">
-        <div class="content">
-            <img src="assets/image.png" alt="Fanclub Banner" class="banner">
-            <div class="newsletter">
-                <div class="newsletter-left">
-                    <h2>DFB<br>(Fan-)Newsletter</h2>
-                </div>
-                <div class="newsletter-right">
-                    <p>IMMER DIE NEUESTEN INFOS UND TERMINE IN DEINEM POSTFACH*</p>
-                    <form>
-                        <input type="email" placeholder="Meine E-Mail-Adresse" required>
-                        <button type="submit">Anmelden</button>
-                    </form>
-                    <p>*Ich möchte den DFB-Fan-Newsletter erhalten und kann mich jederzeit abmelden. Weitere Informationen dazu findest du in der Datenschutzerklärung.</p>
-                </div>
+    <!-- Newsletter Section -->
+<div class="background">
+    <img src="assets/dfb-design-fanclub-poldi2.jpg" alt="Fanclub Hintergrund" class="background-image">
+    <div class="content">
+        <div class="newsletter">
+            <div class="newsletter-left">
+                <h2>DFB<br>(Fan-)Newsletter</h2>
+            </div>
+            <div class="newsletter-right">
+                <p>IMMER DIE NEUESTEN INFOS UND TERMINE IN DEINEM POSTFACH</p>
+                <form id="newsletter-form">
+                    <input type="email" id="email" name="user_email"placeholder="Meine E-Mail-Adresse" required>
+                    <button type="submit">Anmelden</button>
+                </form>
+                <p>*Ich möchte den DFB-Fan-Newsletter erhalten und kann mich jederzeit abmelden.</p>
             </div>
         </div>
+        <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+       (function() {
+           emailjs.init("rWopXvBRq8pYYpxyT"); // Hier YOUR_USER_ID durch deine EmailJS user_id ersetzen
+       })();
+    </script>
+    <script src="script.js"></script>
     </div>
+</div>
 
     <footer class="footer">
         <p>
