User Login/Register Backend

--- a/ws/football/src/main/resources/static/index.html
+++ b/ws/football/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 
@@ -149,6 +149,6 @@
             Durch die Nutzung der Website "Die Mannschaft EM 2024" erklärst du, dass du diese Datenschutzvereinbarung gelesen, verstanden und akzeptiert hast. Wenn du mit dieser Vereinbarung nicht einverstanden bist, ist es dir untersagt, die Website zu nutzen.</p>
         </div>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
