--- a/ws/football/src/main/resources/static/index.html
+++ b/ws/football/src/main/resources/static/index.html
@@ -12,19 +12,19 @@
 
 <body>
     <header class="header">
-        <a href="index.html"><img src="/assets/Logo.png" class="logo"></a>
+        <a href="/"><img src="/assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
             <i class="bx bx-x" id="close-menu"></i>
         </label>    
         <nav class="navbar">
-            <a href="index.html"  style="color: #C1A875">Startseite</a>
-            <a href="kader.html">DFB-Kader</a>
-            <a href="stadien.html">Stadien</a>
-            <a href="ergebnisse.html">Ergebnisse</a>
-            <a href="forum.html">Forum</a>
-            <a href="login.html">Login</a>
+            <a href="/" style="color: #C1A875">Startseite</a>
+            <a href="/kader">DFB-Kader</a>
+            <a href="/stadien">Stadien</a>
+            <a href="/ergebnisse">Ergebnisse</a>
+            <a href="/forum">Forum</a>
+            <a href="/login">Login</a>
         </nav>
         </header>
         <main></main> <!-- Bild ist mit css eingefügt -->
