--- a/ws/football/src/main/resources/static/index.html
+++ b/ws/football/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
             <a href="/login">Login</a>
         </nav>
         </header>
-        <main></main> <!-- Bild ist mit css eingefügt -->
+        <main></main>
         <section class="striche">
             <div class="linie"></div>
             <div class="linie"></div>
@@ -185,7 +185,7 @@
         </div>
 
 
-    <!-- Newsletter Section -->
+    <!-- Newsletter Bereich -->
 <div class="background">
     <img src="/assets/dfb-design-fanclub-poldi2.jpg" alt="Fanclub Hintergrund" class="background-image">
     <div class="content">
@@ -205,7 +205,7 @@
         <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script type="text/javascript">
        (function() {
-           emailjs.init("rWopXvBRq8pYYpxyT"); // Hier YOUR_USER_ID durch deine EmailJS user_id ersetzen
+           emailjs.init("rWopXvBRq8pYYpxyT"); //Unsere Daten von der Email APi
        })();
     </script>
     </div>
@@ -219,7 +219,7 @@
         </p>
     </footer>
 
-    <!-- Modals -->
+    <!-- Fußzeile -->
     <div id="termsModal" class="modal">
         <div class="modal-content">
             <span class="close" id="closeTerms">&times;</span>
